# Archivement

./: README.md  package-lock.json  package.json  svelte.config.js
src/: app.css  app.html  entrySettings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: entry.svelte  goalInput.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/create/: +page.svelte
src/routes/entry_content/: +page.svelte
src/routes/entry_content/[settings]/: +page.js  +page.svelte
